--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,6 @@ Imports:
   dplyr (>= 0.4.3),
   shinyAce (>= 0.2.1),
   whisker (>= 0.3-2),
-  tidyr (>= 0.4.1)
+  tidyr (>= 0.4.1),
+  DT (>= 0.1)
 
